--- a/TermPaperHints/GiveAPresentation.Rmd
+++ b/TermPaperHints/GiveAPresentation.Rmd
@@ -9,20 +9,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # From the Syllabus
 
-4. Authors must schedule a 20-minute presentation to the class on data collection, design and analysis approach prior to completion of the draft paper.  Students conducting a literature review should schedule a similar session for a key papers in their literature review. These presentation will be scheduled to take place from _Dates_ unless the author team wants to schedule something earlier.  Early drafts and annotated bibliographies should be distributed before the presentation.
+> Authors must schedule a 20-minute presentation to the class on data collection, design and analysis approach prior to completion of the draft paper.  Students conducting a literature review should schedule a similar session for a key papers in their literature review. These presentation will be scheduled to take place from _Dates_ unless the author team wants to schedule something earlier.  Early drafts and annotated bibliographies should be distributed before the presentation.
 
 # Details
 
 You need to drop your stress level on this.  These are not flashy presentations made to impress.  These are presentations where you show where you are now, and ask the class for help on what to do next or what you are having trouble understanding.  There are a lot of creative minds and expertise in the room.  Use it.
 
-You can pass the early drafts and annotated bibliographies to the class on slack.   There is no need to print.
+You can pass the early drafts and annotated bibliographies to the class electronically.   There is no need to print.
 
 + Don't spend a lot of time framing the paper.  We generally know your topic and we have seen your abstract.  That is why they were handed out.
 + A slide or two on the frame is great. Just avoid the problem of having all frame and no picture.  I've seen a 20 slide presentation that had meat on  two lines of one slide -- the rest was frame and summary.  Nothing screams, "I forgot about this till last night", like that kind of presentation. Don't do this. 
 + Literature reviews should start with a key paper.  Summarize those findings.
 + Tell where that paper led you.  Maybe your paper was on the effect of transportation electrification on distribution expenditures, the poles and wires by your house.  You started thinking that there may be differences between investor owned utilities, IOUs, and consumer owned utilities, COUs, and so you found a few papers on that.  Then tell us what you found out about those differences.
 + The key motif is to not tell us what each paper says, we can all read the papers, but what happens when you look at them together when you are looking for connections and differences.
-+ If there is something in a paper that you don't understand -- put it on a slide.  We can help. Be able to throw a link on slack so we can look.
++ If there is something in a paper that you don't understand -- put it on a slide.  We can help. 
 + End the presentation with what you are going to do next.  It could be things like, "I'm going to look for papers that focus on how the EU is addressing this issue.", or even, "I'm going to check the EIA data they cite and see if their forecasts were close."
 
 
