--- a/SyllabusEnergyEcon.Rmd
+++ b/SyllabusEnergyEcon.Rmd
@@ -128,7 +128,7 @@ Key deadlines for the term paper are given below.  Deadlines in parentheses are 
 
 Term papers must be **less than 20 pages** excluding bibliography, but should be at least 15 pages.  The final submission must include a separate document addressing issues with the draft paper stating how the point is either irrelevant or how it is addressed in the paper.
 
-## Planning for CoVID-19 Flexibility
+## Planning for COVID-19 Flexibility
 
 There is a good chance that some of us will get sick. The [symptoms](https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html) are generally known and the effects are anything between minor and major, temporary and permanent, and death.
 
