Edits to term paper resources.

--- a/TermPaperHints/TermPaperDetails.Rmd
+++ b/TermPaperHints/TermPaperDetails.Rmd
@@ -40,7 +40,7 @@ assignment folder in D2L.
 
 1. Authors and co-authors will construct an annotated bibliography. A reasonably complete annotated bibliography will be submitted in D2L by  _November 6th (October 30th)  at 5pm_ in the “Bibliography” assignment folder.  Here are some links on how to create an annotated bibliography, http://guides.library.cornell.edu/annotatedbibliography and               https://www.bethel.edu/library/research/apa-annobib-sixth.pdf 
 
-1. Authors must schedule a 20-minute presentation to the class on data collection, design and analysis approach prior to completion of the draft paper.  Students conducting a literature review should schedule a similar session for a key papers in their literature review. These presentation will be scheduled completed _November 13th (November 6th)_ unless the author team wants to schedule something earlier.  Early drafts and annotated bibliographies should be distributed before the presentation.
+1. Authors must schedule a 20-minute presentation to the class on data collection, design and analysis approach prior to completion of the draft paper.  Students conducting a literature review should schedule a similar session for a key papers in their literature review. These presentation will be scheduled completed by about _November 13th (November 6th)_ unless the author team wants to schedule something earlier.  The deadline is variable since we can only handle four presentations per class meeting. Early drafts and annotated bibliographies should be distributed before the presentation through slack the day before the presentation so that the class can review the material.  
 
 1. A draft of the paper must be published in the “Draft Papers” assignment folder in D2L by _November 19th  (November 12th) at 5 pm_.  Comments returned by November 23rd (November 16th) 8pm.  These comments will need to be addressed in the final paper. If you are writing an empirical paper, the submission should include a link to your data and the code used to analyze the data. 
 
