Slides for pretest

--- a/SyllabusEnergyEcon.Rmd
+++ b/SyllabusEnergyEcon.Rmd
@@ -166,7 +166,7 @@ You now feel better and you have missed four or fewer classes:
 
 The one-on-one meetings with me are intended to verify that you have done due diligence on the reading and are thinking about the issues at a college level and connecting them to what you know about economic theory and statistics. I will grade these meetings the same way I grade in class discussion.
 
-There is also the possibility that your illness will make it difficult to stay on schedule to complete your term paper. Because the term paper is a longer-term project, there is more time to catch up. When you are done with your illness that lasts four or fewer classes in a row, you will have three options with respect to the term paper deadlines:
+There is also the possibility that your illness will make it difficult to stay on schedule to complete your term paper. Because the term paper is a longer-term project, there is more time to catch up. When you are done with your illness that lasts at least two but less than four classes in a row, you will have three options with respect to the term paper deadlines:
 
 1.  **Situation Normal**:  All remaining deadlines remain the same.
 1.  **I Can Recover**:  All remaining deadlines are pushed back a week, except for the final draft of the paper which is due three days later.  This can only be done after the one-on-one meetings to discuss missed in-class discussions are scheduled.
